welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:4: error: '(' expected but identifier found.
    if tea==2*candy || candy==2*tea){
       ^teaParty:9: error: illegal start of simple expression
  }else{
  ^